<resources>
    <string name="app_name">Currency converter</string>
    <string name="usd_currency" translatable="false">USD</string>
    <string name="rub_currency" translatable="false">RUB</string>
    <string name="convert_from">Convert from</string>
    <string name="convert_to">Convert to</string>
    <string name="result">Result:</string>
    <string name="convert">Convert</string>
    <string name="connection_error_title">Connection error</string>
    <string name="connection_error_msg">Turn on internet connection and try again!</string>
    <string name="not_found_title">Not found error</string>
    <string name="not_found_msg">Something went wrong. Please try again later!</string>
</resources>
