<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/tvTitleFrom"
        style="@style/convert_title_style"
        android:text="@string/convert_from"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerFromCurrency"
        style="@style/convert_field_style"
        android:text="@string/usd_currency"
        app:layout_constraintTop_toBottomOf="@id/tvTitleFrom" />

    <View
        style="@style/delimiter_style"
        app:layout_constraintTop_toBottomOf="@id/spinnerFromCurrency" />

    <TextView
        android:id="@+id/tvTitleTo"
        style="@style/convert_title_style"
        android:text="@string/convert_to"
        app:layout_constraintTop_toBottomOf="@id/spinnerFromCurrency" />

    <Spinner
        android:id="@+id/spinnerToCurrency"
        style="@style/convert_field_style"
        android:text="@string/rub_currency"
        app:layout_constraintTop_toBottomOf="@id/tvTitleTo" />

    <View
        style="@style/delimiter_style"
        app:layout_constraintTop_toBottomOf="@id/spinnerToCurrency" />

    <android.support.constraint.Group
        android:id="@+id/resultGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="tvResultTitle,tvResult" />

    <TextView
        android:id="@+id/tvResultTitle"
        style="@style/result_title_style"
        android:text="@string/result"
        app:layout_constraintTop_toBottomOf="@id/spinnerToCurrency" />

    <TextView
        android:id="@+id/tvResult"
        style="@style/result_style"
        app:layout_constraintTop_toBottomOf="@id/spinnerToCurrency" />

    <Button
        android:id="@+id/btnConvert"
        style="@style/button_style"
        android:text="@string/convert"
        app:layout_constraintTop_toBottomOf="@id/tvResultTitle" />

    <ProgressBar
        android:id="@+id/pbConvert"
        style="@style/progress_style"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/tvResultTitle" />

</android.support.constraint.ConstraintLayout>
